create a calc design

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ html {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  font-size: 16px;
+  font-size: 1rem;
 }
 
 *, *:before, *:after {
@@ -10,7 +12,33 @@ html {
   -moz-box-sizing: inherit;
 }
 
-* {
+.container {
+  width: 10rem; /* 160px */
   border: 1px solid black;
+  padding: 0.5rem; /* 8px */
 }
 
+.screen {
+  height: 3rem; /* 48px */
+  border: 1px solid black;
+  /* border-radius: 0.25rem; */
+  text-align: right;
+  font-size: 1.5rem; /* 24px */
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.5rem; /* 8px */
+}
+
+.button {
+  width: 2rem; /* 32px */
+  height: 2rem; /* 32px */
+  border: 1px solid black;
+  /* border-radius: 50%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
