--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
   font-size: 1.4rem; /* 22.4px */
 }
 
-.button-wrapper {
+.button-container {
   display: flex;
   justify-content: space-between;
   margin-top: 0.5rem; /* 8px */
